tests/neg-no-kind-polymorphism/anykind.scala

trait Foo[T <: AnyKind] // error: Not found: type AnyKind
